@@ -1,65 +1,69 @@
 package com.kozitskiy.orderservice.service;
 
+import com.kozitskiy.dto.OrderCreatedEvent;
 import com.kozitskiy.orderservice.client.UserClient;
 import com.kozitskiy.orderservice.dto.*;
 import com.kozitskiy.orderservice.entity.Item;
 import com.kozitskiy.orderservice.entity.Order;
 import com.kozitskiy.orderservice.entity.OrderItem;
-import com.kozitskiy.orderservice.entity.OrderStatus;
+import com.kozitskiy.orderservice.entity.enums.OrderStatus;
 import com.kozitskiy.orderservice.exception.InvalidOrderStatusException;
 import com.kozitskiy.orderservice.exception.ItemNotFoundException;
 import com.kozitskiy.orderservice.exception.OrderNotFoundException;
+import com.kozitskiy.orderservice.kafka.producer.OrderEventProducer;
+import com.kozitskiy.orderservice.mapper.OrderItemMapper;
 import com.kozitskiy.orderservice.mapper.OrderMapper;
 import com.kozitskiy.orderservice.repository.ItemRepository;
 import com.kozitskiy.orderservice.repository.OrderRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 @RequiredArgsConstructor
-public class OrderServiceImpl implements OrderService{
+public class OrderServiceImpl implements OrderService {
 
     private final OrderRepository orderRepository;
     private final ItemRepository itemRepository;
     private final OrderMapper orderMapper;
-    private final UserClient userClient; // Feign-client
+    private final OrderItemMapper orderItemMapper;
+    private final UserClient userClient;
+    private final OrderEventProducer orderEventProducer;
 
     @Override
     @Transactional
     public OrderResponse createOrder(OrderCreateRequest request) {
-        // Create Order
-        Order order = Order.builder()
-                .userId(request.getUserId())
-                .status(OrderStatus.PENDING)
-                .creationDate(LocalDateTime.now())
-                .orderItems(new ArrayList<>())
-                .userEmail(request.getUserEmail()) // userEmail
-                .build();
 
-        for (OrderItemRequest itemRequest : request.getItems()){
-            // find item
-            Item item = itemRepository.findById(itemRequest.getItemId())
-                    .orElseThrow(() -> new ItemNotFoundException("Item with id: " + itemRequest.getItemId() + " wasn't found"));
+        Order order = orderMapper.toEntity(request);
 
-            // Creating orderItem line
-            OrderItem orderItem = OrderItem.builder()
-                    .order(order)
-                    .item(item)
-                    .quantity(itemRequest.getQuantity())
-                    .build();
+        order.setStatus(OrderStatus.PENDING);
+        order.setCreationDate(LocalDateTime.now());
 
-            order.getOrderItems().add(orderItem);
-        }
+        request.items().forEach(itemReq -> {
+            Item item = itemRepository.findById(itemReq.itemId())
+                    .orElseThrow(() -> new ItemNotFoundException("Item not found " + itemReq.itemId()));
 
-        Order saved = orderRepository.save(order);
+            OrderItem orderItem = orderItemMapper.toEntity(itemReq);
+            orderItem.setItem(item);
 
-        return enrichOrderWithUser(saved);
+            order.addOrderItem(orderItem);
+        });
+
+        Order savedOrder = orderRepository.save(order);
+
+        OrderCreatedEvent event = orderMapper.toEvent(savedOrder, savedOrder.getTotalAmount());
+        orderEventProducer.sendOrderCreated(event);
+
+        log.info("Order created and sent to Kafka. ID: {}", savedOrder.getId());
+
+        return enrichOrderWithUser(savedOrder);
     }
 
     @Override
@@ -75,11 +79,11 @@ public class OrderServiceImpl implements OrderService{
     @Override
     @Transactional(readOnly = true)
     public List<OrderResponse> getOrdersByIds(List<Long> ids) {
-        if (ids == null || ids.isEmpty()){
+        if (ids == null || ids.isEmpty()) {
             return List.of();
         }
 
-        List<Order> orders = orderRepository.findAllById(ids);
+        List<Order> orders = orderRepository.findAllByIdIn(ids);
         return orders.stream()
                 .map(this::enrichOrderWithUser)
                 .collect(Collectors.toList());
@@ -88,47 +92,42 @@ public class OrderServiceImpl implements OrderService{
     @Override
     @Transactional(readOnly = true)
     public List<OrderResponse> getOrdersByStatuses(List<String> statuses) {
-        if(statuses == null || statuses.isEmpty()){
+        if (statuses == null || statuses.isEmpty()) {
             return List.of();
         }
 
-        List<OrderStatus> statusEnums = new ArrayList<>();
-        for (String statusStr : statuses) {
-            if (statusStr == null || statusStr.isBlank()) continue;
-            try {
-                OrderStatus status = OrderStatus.valueOf(statusStr.toUpperCase());
-                statusEnums.add(status);
-            } catch (IllegalArgumentException e) {
-                throw new InvalidOrderStatusException("Invalid order status: " + statusStr);
-            }
-        }
-        if (statusEnums.isEmpty()) {
-            return List.of();
-        }
+        List<OrderStatus> statusEnums = statuses.stream()
+                .filter(Objects::nonNull)
+                .filter(s -> !s.isBlank())
+                .map(s -> {
+                    try {
+                        return OrderStatus.valueOf(s.toUpperCase());
+                    } catch (IllegalArgumentException e) {
+                        throw new InvalidOrderStatusException("Invalid order status: " + s);
+                    }
+                })
+                .toList();
 
-        List<Order> orders = orderRepository.findByStatusIn(statusEnums);
-
-        return orders.stream()
+        return orderRepository.findByStatusIn(statusEnums).stream()
                 .map(this::enrichOrderWithUser)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
     public OrderResponse updateOrder(Long id, OrderUpdateRequest request) {
-        if (request.getStatus() == null || request.getStatus().isBlank()){
+        if (request.status() == null || request.status().isBlank()) {
             throw new InvalidOrderStatusException("Status cannot be null or empty");
         }
 
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new OrderNotFoundException("Order not found: " + id));
 
-
         try {
-            OrderStatus newStatus = OrderStatus.valueOf(request.getStatus().toUpperCase());
+            OrderStatus newStatus = OrderStatus.valueOf(request.status().toUpperCase());
             order.setStatus(newStatus);
-        }catch (IllegalArgumentException e) {
-            throw new InvalidOrderStatusException("Invalid status: " + request.getStatus());
+        } catch (IllegalArgumentException e) {
+            throw new InvalidOrderStatusException("Invalid status: " + request.status());
         }
 
         Order saved = orderRepository.save(order);
@@ -139,21 +138,20 @@ public class OrderServiceImpl implements OrderService{
     @Override
     @Transactional
     public void deleteOrder(Long id) {
-        if (!orderRepository.existsById(id)){
+        if (!orderRepository.existsById(id)) {
             throw new OrderNotFoundException("Order not found: " + id);
         }
         orderRepository.deleteById(id);
     }
 
-    private OrderResponse enrichOrderWithUser(Order order){
+    private OrderResponse enrichOrderWithUser(Order order) {
         OrderResponse response = orderMapper.toDto(order);
         try {
             UserDto user = userClient.getUserByEmail(order.getUserEmail());
-            response.setUser(user);
-        }catch (Exception e){
-            System.out.println("WARN: Failed to fetch user by email: " + order.getUserEmail() + ", error: " + e.getMessage());
-            response.setUser(null);
+            return response.toBuilder().user(user).build();
+        } catch (Exception e) {
+            log.warn("Failed to fetch user by email: {}, error: {}", order.getUserEmail(), e.getMessage());
+            return response;
         }
-        return response;
     }
 }
